src/objects/ED_Answer__c.object
<CustomObject>
    <fields>
        <fullName>Answer_Text__c</fullName>
        <label>Answer Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>ED_Forms</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ED_Form_Setting__c</fullName>
        <label>ED Form Setting</label>
        <referenceTo>ED_Form_Setting__c</referenceTo>
        <relationshipName>ED_Forms</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>ED Answer</label>
    <nameField>
        <displayFormat>ED-{00000}</displayFormat>
        <label>ED Answer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ED Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>